refactor: move session instantiation to utils package
Created a utils package and session_utils.py to instantiate sessions with preconfigured headers. This will be useful for addition classes that use sessions.

--- a/resources/job_links/careers.netapp.com.json
+++ b/resources/job_links/careers.netapp.com.json
@@ -2093,5 +2093,50 @@
     "url": "https://careers.netapp.com/job/india/partner-technical-lead-gsi/27600/80399683552",
     "raw_text": "\n\nPartner Technical Lead - GSI\n India\n\nSave\n",
     "date_scraped": "2025-05-30 15:58:15"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/mgr-technical-support/27600/81952326112",
+    "raw_text": "\n\nMgr, Technical Support\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-05-31 18:25:48"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/data-scientist/27600/81952326096",
+    "raw_text": "\n\nData Scientist\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-05-31 18:25:48"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/software-qa-engineer-oracle-cloud-finance-and-scm-automation-qa-test-engineer/27600/81952326080",
+    "raw_text": "\n\nSoftware QA Engineer / Oracle Cloud Finance and SCM Automation QA Test Engineer\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-05-31 18:25:48"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/full-stack-developer/27600/81952326064",
+    "raw_text": "\n\nFull Stack Developer\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-05-31 18:25:48"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/salesforce-developer/27600/81952326032",
+    "raw_text": "\n\nSalesforce Developer\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-05-31 18:25:48"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/data-analytics-support-engineer/27600/81952326016",
+    "raw_text": "\n\nData analytics support engineer\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-05-31 18:25:48"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/oracle-cpq-support-engineer-oracle-cpq-functional-consultant/27600/81952326000",
+    "raw_text": "\n\nOracle CPQ Support engineer / Oracle CPQ functional consultant\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-05-31 18:25:48"
+  },
+  {
+    "url": "https://careers.netapp.com/job/north-carolina/software-engineer-keystone/27600/81952325568",
+    "raw_text": "\n\nSoftware Engineer - Keystone\n North Carolina, United States\n\nSave\n",
+    "date_scraped": "2025-05-31 18:25:48"
+  },
+  {
+    "url": "https://careers.netapp.com/job/philadelphia/senior-solutions-engineer-enterprise-sales-philadelphia-pa/27600/81934998960",
+    "raw_text": "\n\nSenior Solutions Engineer - Enterprise Sales (Philadelphia, PA)\nPhiladelphia, Pennsylvania, United States; United States\n\nSave\n",
+    "date_scraped": "2025-05-31 18:25:48"
   }
 ]
