refactor: move useful functionality to utils package
Some commonly used code has been put into the utils package for use in multiple locations.

--- a/resources/job_links/careers.netapp.com.json
+++ b/resources/job_links/careers.netapp.com.json
@@ -2138,5 +2138,55 @@
     "url": "https://careers.netapp.com/job/philadelphia/senior-solutions-engineer-enterprise-sales-philadelphia-pa/27600/81934998960",
     "raw_text": "\n\nSenior Solutions Engineer - Enterprise Sales (Philadelphia, PA)\nPhiladelphia, Pennsylvania, United States; United States\n\nSave\n",
     "date_scraped": "2025-05-31 18:25:48"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/software-engineer/27600/82047317280",
+    "raw_text": "\n\nSoftware Engineer\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-06-02 12:20:55"
+  },
+  {
+    "url": "https://careers.netapp.com/job/cork/client-executive/27600/81333210864",
+    "raw_text": "\n\nClient Executive\nCork, Ireland;  Ireland\n\nSave\n",
+    "date_scraped": "2025-06-02 12:20:55"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/mgr-software-engineer-saas/27600/82047317216",
+    "raw_text": "\n\nMgr, Software Engineer (SaaS)\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-06-02 12:20:55"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/software-engineer-java-python-net/27600/82047317168",
+    "raw_text": "\n\nSoftware Engineer (Java/Python/.Net)\nBengaluru, India;  India\n\nSave\n",
+    "date_scraped": "2025-06-02 12:20:55"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/software-engineer/27600/82043035888",
+    "raw_text": "\n\nSoftware Engineer\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-06-02 12:20:55"
+  },
+  {
+    "url": "https://careers.netapp.com/job/kirchheim-bei-munchen/technical-solutions-specialist/27600/79628855536",
+    "raw_text": "\n\nTechnical Solutions Specialist\nKirchheim bei München, Germany;  Germany;  Germany; Düsseldorf, Germany;  Germany;  Germany\n\nSave\n",
+    "date_scraped": "2025-06-02 12:20:55"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/software-engineer/27600/82043035440",
+    "raw_text": "\n\nSoftware Engineer\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-06-02 12:20:55"
+  },
+  {
+    "url": "https://careers.netapp.com/job/tokyo/%e3%83%8f%e3%82%a4%e3%83%95%e3%83%aa%e3%83%83%e3%83%88%e3%82%bb%e3%83%bc%e3%83%ab%e3%82%b9/27600/81045782704",
+    "raw_text": "\n\nハイブリッドセールス\nTokyo, Japan\n\nSave\n",
+    "date_scraped": "2025-06-02 12:20:55"
+  },
+  {
+    "url": "https://careers.netapp.com/job/singapore/director-solution-sales/27600/82034431408",
+    "raw_text": "\n\nDirector, Solution Sales\nRemote - SG \n Singapore;  Remote; North Sydney, Australia;  Australia; Singapore, Singapore; Melbourne, Australia\n\nSave\n",
+    "date_scraped": "2025-06-02 12:20:55"
+  },
+  {
+    "url": "https://careers.netapp.com/job/bengaluru/technical-support-engineer/27600/81240586720",
+    "raw_text": "\n\nTechnical Support Engineer\nBengaluru, India\n\nSave\n",
+    "date_scraped": "2025-06-02 12:20:55"
   }
 ]
